pod-busybox-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - image: busybox
      name: busy
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /busy
          name: test-volume
      command:
        - sleep
        - "3600"
    - image: busybox
      name: box
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /box
          name: test-volume
      command:
        - sleep
        - "3600"
  volumes:
    - name: test-volume
      persistentVolumeClaim:
        claimName: myclaim
  restartPolicy: Always
