pod-busybox-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-with-secret
spec:
  containers:
    - image: busybox-with-secret
      name: busybox
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /busy
          name: test
      command:
        - sleep
        - "3600"
  volumes:
    - name: test
      secret:
        secretName: mysecret
