pod-busybox-with-volume-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - image: busybox
      name: busy
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /busy
          name: test
      command:
        - sleep
        - "3600"
    - image: busybox
      name: box
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /box
          name: test
      command:
        - sleep
        - "3600"
  volumes:
    - name: test
      emptyDir: {}
  restartPolicy: Always
